# baretensor

./: .clang-format  .gitignore  AGENTS.md  CMakeLists.txt  CMakePresets.json  Makefile  PLAN.md  PROJECT.md  README.md  REFACTORING_PLAN.md  SETUP.md  TODO.md  pyproject.toml  pyrightconfig.json
artifacts/experiments/001_bigram_bt/20260309_001819_741240/: loss_history.csv
artifacts/experiments/001_bigram_torch/20260309_001835_287317/: loss_history.csv
artifacts/experiments/002_mlp_bt/20260308_205717_738961/: loss_history.csv
artifacts/experiments/002_mlp_bt/20260314_130209_063051/: loss_history.csv
artifacts/experiments/002_mlp_torch/20260309_001853_381825/: loss_history.csv
artifacts/experiments/002_mlp_torch/20260312_003442_834071/: loss_history.csv
artifacts/experiments/003_context_window_linear_bt/20260309_002110_007479/: loss_history.csv
artifacts/experiments/003_context_window_linear_bt/20260312_003938_668841/: loss_history.csv
artifacts/experiments/003_context_window_linear_torch/20260309_002002_855304/: loss_history.csv
artifacts/experiments/003_context_window_linear_torch/20260312_003712_975024/: loss_history.csv
artifacts/experiments/004_context_window_mlp_bt/20260312_003402_694043/: loss_history.csv
artifacts/experiments/004_context_window_mlp_bt/20260314_130738_748028/: loss_history.csv
artifacts/experiments/004_context_window_mlp_torch/20260312_002714_707523/: loss_history.csv
artifacts/experiments/004_context_window_mlp_torch/20260312_004008_912442/: loss_history.csv
artifacts/experiments/005_larger_context_mlp_bt/20260312_112719_857698/: loss_history.csv
artifacts/experiments/005_larger_context_mlp_bt/20260314_132023_262099/: loss_history.csv
artifacts/experiments/005_larger_context_mlp_torch/20260312_112502_613159/: loss_history.csv
artifacts/experiments/005_larger_context_mlp_torch/20260312_112822_814813/: loss_history.csv
artifacts/experiments/006_vanilla_rnn_torch/20260315_001102_953260/: loss_history.csv
configs/: baseline_tinystories.toml  baseline_tinystories.yaml
docs/: learning_log.md  llm_roadmap.md
examples/: dog_demo.py  example.py
experiments/: 001_bigram_bt.py  001_bigram_torch.py  002_mlp_bt.py  002_mlp_torch.py  003_context_window_linear_bt.py  003_context_window_linear_torch.py  004_context_window_mlp_bt.py  004_context_window_mlp_torch.py  005_larger_context_mlp_bt.py  006_vanilla_rnn_bt.py  006_vanilla_rnn_torch.py  README.md
milestones/: a1.md
native/include/bt/: dog.h  dtype.h  ops.h  storage.h  tensor.h
native/include/bt/detail/: autograd_record.h  broadcast.h  dims.h  format.h  shape.h  tensor_cast.h  tensor_copy.h  tensor_nn_autograd.h  tensor_validation.h
native/python/: bindings.cpp
native/src/: autograd.cpp  ops.cpp  storage.cpp  tensor.cpp  tensor_core.cpp  tensor_factories.cpp  tensor_indexing.cpp  tensor_join.cpp  tensor_linalg.cpp  tensor_nn.cpp  tensor_nn_autograd.cpp  tensor_nn_ops.cpp  tensor_reductions.cpp  tensor_views.cpp
native/src/detail/: broadcast.cpp  dims.cpp  format.cpp  shape.cpp  tensor_cast.cpp  tensor_copy.cpp
scripts/: bootstrap.sh  train.py
src/bt/: _C.pyi  __init__.py  __init__.pyi
src/bt/nn/: __init__.py  functional.py
tests/: test_a1_nanobind_add.py  test_a1_nanobind_dog.py  test_api_surface.py  test_autograd_basic.py  test_autograd_gradcheck_extra.py  test_autograd_matmul.py  test_autograd_nn_ops.py  test_autograd_ops.py  test_autograd_state_and_edge_cases.py  test_autograd_torch_parity.py  test_autograd_views.py  test_cat.py  test_constructors_and_metadata.py  test_contiguous.py  test_cross_entropy.py  test_dtype.py  test_elementwise_ops.py  test_embedding.py  test_exp.py  test_grad_mode.py  test_indexing.py  test_inplace_ops.py  test_layer_norm.py  test_log.py  test_log_softmax.py  test_matmul.py  test_max.py  test_mean.py  test_permute.py  test_reshape.py  test_softmax.py  test_stack.py  test_sum.py  test_tanh.py  test_transpose.py  utils.py
