[project]
name = "baretensor"
version = "0.0.0"
requires-python = ">=3.13"
dependencies = []

[dependency-groups]
dev = [
  "nanobind",
  "pyright",
  "ruff",
]

[tool.ruff]
target-version = "py313"
line-length = 100
src = ["src"]
extend-exclude = ["third_party", "build"]

[tool.ruff.format]
quote-style = "double"
