[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "baretensor"
version = "0.0.0"
requires-python = ">=3.13"
dependencies = [
    "torch>=2.10.0",
]

[dependency-groups]
dev = ["ipykernel", "nanobind", "pyright", "ruff"]

[tool.ruff]
target-version = "py313"
line-length = 100
src = ["src"]
extend-exclude = ["third_party", "build"]

[tool.ruff.format]
quote-style = "double"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["bt*"]

[tool.setuptools.package-data]
bt = ["py.typed", "*.pyi", "_C*.so", "_C*.dylib", "_C*.pyd"]
